private/stylesheets/main.css
body {
    margin: 0;
    color: #00FF00;
    background-color: #001400;
    font-family: monospace;
    overflow: hidden;
    font-size: 1em;
    white-space: pre-wrap;
}

ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

li {
    word-wrap: break-word;
}

pre {
    padding: 0;
    margin: 0;
}

#marker {
    /* Needed to hide caret. */
    color: transparent;
    width: .8em;
    margin: 0;
    padding: 0;
    border: 0;
    border-radius: 0;
    text-align: center;
    background-color: #00FF00;
    -webkit-user-select: none;
    user-select: none;
    -webkit-animation: blinking 1s step-end infinite;
    animation: blinking 1s step-end infinite;
}

#marker:focus {
    outline: 0;
}

#background {
    cursor: none;
    width: 100%;
    height: 100vh;
}

#background:before {
    content: '';
    width: 100%;
    height: 100vh;
    position: fixed;
    background: -webkit-linear-gradient(#A0E6A0 50%, black 50%);
    background: linear-gradient(#A0E6A0 50%, black 50%);
    background-size: 100% 5px;
    opacity: .13;
}

#mode {
    margin-right: .7em;
}

#mode:after {
    content: '$';
}

#main:before {
    content : '';
    width: 100%;
    height: 100vh;
    position: fixed;
    -webkit-box-shadow: inset 0 0 40px 2px #000000;
    box-shadow: inset 0 0 40px 2px #000000;
}

#map {
    border: dotted 1px;
}

#map td {
    margin: 0;
    padding: .5em;
    border: dotted 1px;
}

.logo {
    white-space: pre;
    line-height: 1.2;
    text-transform: uppercase;
}

.importantMsg {
    line-height: 1.1;
    background-color: #00FF00;
    color: black;
    font-size: 1.2em;
    text-transform: uppercase;
    font-weight: bold;
    text-align: center;
}

.large {
    font-size: 2em;
}

.feed {
    padding-left: .5em;
    padding-right: .5em;
}

.anon {
    font-size: 0.2em;
}

@-webkit-keyframes blinking {
    from {
        background-color: transparent;
        text-shadow: 0px 0px .0001px #00FF00;
    }
    50% {
        background-color: #00FF00;
    }
}

@keyframes blinking {
    from {
        background-color: transparent;
        text-shadow: 0px 0px .0001px #00FF00;
    }
    50% {
        background-color: #00FF00;
    }
}

@media (max-height: 768px) and (max-width: 1024px) {
}

@media (max-height: 736px) and (max-width: 414px) {
    #map {
        font-size: .6em;
    }

    #map td {
        padding: .1em;
    }

    #background:before {
        -webkit-box-shadow: inset 0 0 20px 2px red;
        box-shadow: inset 0 0 20px 2px red;
    }

    .logo {
        font-size: .6em;
    }
}

/* PiTft */
@media (max-height: 240px) {
    #background:before {
        -webkit-box-shadow: inset 0 0 20px 2px #000000;
        box-shadow: inset 0 0 20px 2px #000000;
    }

    .feed {
        padding-left: .1em;
        padding-right: .1em;
    }

    .logo {
        font-size: .6em;
    }
}

